# ara-eval

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.claude/commands/: ara-evaluate.md
.github/ISSUE_TEMPLATE/: scenario.yml
.github/workflows/: ci.yml
ara_eval/: __init__.py  core.py
deploy/: ara-eval.service  nginx-ara-eval.conf
docs/: 2026-05-newer-isnt-better.md  backlog.md  blog-post-draft.md  framework.md  human-validation-brief.md  models.md  test-run-report.md
labs/: README.md  generate-report.py  lab-01-risk-fingerprinting.py  lab-02-grounding-experiment.py  lab-03-intra-rater-reliability.py  lab-04-inter-model-comparison.py  lab-05-build-your-own-scenario.py  lab-05-dispatch.py  lab-05-subagent-evaluation.py  publish-leaderboard.py  sync-leaderboard.py  update-readme-leaderboard.py  view-requests.py
prompts/: agent_persona.md  output_format.md  rubric-bare.md  rubric-compact.md  rubric.md  user_prompt.md  user_prompt_structured.md
reviews/: review-20260311-190757-477a1c.md  review-20260311-205203-7d9063.md  review-20260315-160730-bcc236.md  review-20260315-173058-c61d65.md  review-20260316-173637-f3c291.md  review-20260316-200545-33944a.md
scenarios/: starter-scenarios.json
shared/: challenges.json  dimensions.json  leaderboard.json  models.json
supabase/: config.toml
tests/: test_core.py  test_smoke.py
web/: .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
(+242 files in other folders)
